[package]
name = "webhook"
version = "0.1.0"
authors = ["Agus Sentosa Hermawan <agus.sentosa787@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-pubsub1 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "1.11.0", features = ["full"] }
envy = "0.4.2"
serde_yaml = "0.8.20"
log = "0.4.14"
env_logger = "0.9.0"
walkdir = "2.3.2"
crossbeam-channel = "0.5.1"
futures = "0.3.17"
signal-hook = { version = "0.3.10", features = ["iterator"] }
thiserror = "1.0.29"
async-trait = "0.1.51"
base64 = "0.13.0"
